# ruv-FANN

./: .gitignore
.github/workflows/: marketing-swarm-ci.yml
ruv-marketing-swarm/: Cargo.toml  README.md  docker-compose.yml
ruv-marketing-swarm/apps/swarm-studio/: package.json
ruv-marketing-swarm/apps/swarm-studio/src/: index.tsx
ruv-marketing-swarm/apps/swarm-studio/src-tauri/: Cargo.toml
ruv-marketing-swarm/apps/swarm-studio/src-tauri/src/: main.rs
ruv-marketing-swarm/clients/python/: README.md  pyproject.toml
ruv-marketing-swarm/clients/ts/: README.md  package.json
ruv-marketing-swarm/crates/fann_core/: Cargo.toml
ruv-marketing-swarm/crates/fann_core/src/: lib.rs
ruv-marketing-swarm/crates/marketing_divergent/: Cargo.toml
ruv-marketing-swarm/crates/marketing_divergent/src/: lib.rs
ruv-marketing-swarm/crates/marketing_swarm/: Cargo.toml  build.rs
ruv-marketing-swarm/crates/marketing_swarm/proto/: marketing.proto
ruv-marketing-swarm/crates/marketing_swarm/src/: lib.rs  main.rs
ruv-marketing-swarm/docs/: book.toml
ruv-marketing-swarm/docs/src/: SUMMARY.md  agents.md  connectors.md  playbooks.md
ruv-marketing-swarm/examples/: parasite_seo_playbook.rs
ruv-marketing-swarm/scripts/: seed_trending.rs
