[package]
name = "marketing_swarm"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
axum = "0.7"
tonic = { version = "0.11", features = ["transport"] }
prost = "0.12"
prost-types = "0.12"
async-trait = "0.1"
thiserror = "1.0"
anyhow = "1.0"

[build-dependencies]
prost-build = "0.12"
tonic-build = "0.11"

